examples/test/testpolicy1255.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1255
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key45: value5
      key25: value38
      key1: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value13
          key21: value3
      podSelector:
        matchLabels:
          key37: value46
          key25: value48
